--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,60 @@
 appdirs==1.4.4
+attrs==23.1.0
 autograd==1.6.2
 autoray==0.6.7
+beautifulsoup4==4.12.2
 bitarray==2.8.4
 bitstring==4.1.4
+bleach==6.1.0
 cachetools==5.3.2
 certifi==2023.11.17
 charset-normalizer==3.3.2
 contourpy==1.2.0
 cycler==0.12.1
+defusedxml==0.7.1
 dill==0.3.7
+fastjsonschema==2.19.0
 fonttools==4.45.0
 future==0.18.3
 idna==3.4
+Jinja2==3.1.2
+jsonschema==4.20.0
+jsonschema-specifications==2023.11.2
+jupyterlab_pygments==0.3.0
 kiwisolver==1.4.5
+MarkupSafe==2.1.3
 matplotlib==3.8.2
+mistune==3.0.2
 mpmath==1.3.0
+nbclient==0.9.0
+nbconvert==7.12.0
+nbformat==5.9.2
 networkx==3.2.1
 numpy==1.26.2
+pandas==2.1.3
+pandocfilters==1.5.0
 pbr==6.0.0
 PennyLane==0.33.1
 PennyLane-Lightning==0.33.1
 Pillow==10.1.0
 ply==3.11
 pyparsing==3.1.1
+pytz==2023.3.post1
 qiskit==0.45.0
 qiskit-terra==0.45.0
+referencing==0.31.1
 requests==2.31.0
+rpds-py==0.13.2
 rustworkx==0.13.2
 scipy==1.11.4
+seaborn==0.13.0
 semantic-version==2.10.0
+soupsieve==2.5
 stevedore==5.1.0
 symengine==0.9.2
 sympy==1.12
+tinycss2==1.2.1
 toml==0.10.2
+tzdata==2023.3
 urllib3==2.1.0
+webencodings==0.5.1
